--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -13,6 +13,12 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>Upload images for screen background</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Upload image from camera for screen background</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Post videos to profile</string>
 	<string>cookeat</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
